--- a/config/settings.json
+++ b/config/settings.json
@@ -36,5 +36,6 @@
             "prompt": "",
             "model": ""
         }
-    }
+    },
+    "results_path": "C:/Users/kvxshenyjbetxn/Desktop/test"
 }
