--- a/config/settings.json
+++ b/config/settings.json
@@ -74,5 +74,13 @@
         "model": "google/gemini-2.5-flash",
         "max_tokens": 10000
     },
-    "results_path": "C:/Users/kvxshenyjbetxn/Desktop/test"
+    "results_path": "C:/Users/kvxshenyjbetxn/Desktop/test",
+    "pollinations": {
+        "model": "dall-e-3",
+        "token": "DidsYB2KjDBFtn6_",
+        "width": 1280,
+        "height": 720,
+        "nologo": true,
+        "enhance": true
+    }
 }
