--- a/config/settings.json
+++ b/config/settings.json
@@ -70,7 +70,7 @@
         }
     },
     "image_prompt_settings": {
-        "prompt": "зроби пару промтів для генерації зображень",
+        "prompt": "зроби 5 промтів для генерації зображень.\nкожен промт з нумераціею 1. промт 2 промт. і так далі\nбез зайвих коментарів.",
         "model": "google/gemini-2.5-flash",
         "max_tokens": 10000
     },
