--- a/config/settings.json
+++ b/config/settings.json
@@ -18,12 +18,18 @@
             "prompt": "переклади на англійську:",
             "model": "google/gemini-2.5-flash",
             "max_tokens": 128000,
-            "elevenlabs_template_uuid": "438a060f-e952-435f-b873-9b18eee4dbfe"
+            "elevenlabs_template_uuid": "438a060f-e952-435f-b873-9b18eee4dbfe",
+            "tts_provider": "VoiceMaker",
+            "voicemaker_voice_id": "ai4-Harry"
         },
         "ru-RU": {
             "display_name": "Російська",
             "prompt": "",
-            "model": ""
+            "model": "google/gemini-2.5-flash",
+            "max_tokens": 128000,
+            "tts_provider": "VoiceMaker",
+            "elevenlabs_template_uuid": "1ff95d26-7660-45d1-a615-ba947d730bea",
+            "voicemaker_voice_id": "ai5-ru-RU-Vladimir"
         },
         "pl-PL": {
             "display_name": "Польська",
