--- a/config/settings.json
+++ b/config/settings.json
@@ -138,5 +138,18 @@
         "fade_in": 200,
         "fade_out": 200,
         "max_words": 10
+    },
+    "montage": {
+        "codec": "libx264",
+        "preset": "ultrafast",
+        "bitrate_mbps": 10,
+        "enable_transitions": true,
+        "transition_duration": 0.5,
+        "enable_zoom": true,
+        "zoom_speed_factor": 1.0,
+        "zoom_intensity": 0.15,
+        "enable_sway": true,
+        "sway_speed_factor": 2.0,
+        "upscale_factor": 3.0
     }
 }
