--- a/config/settings.json
+++ b/config/settings.json
@@ -33,19 +33,19 @@
             "prompt": "",
             "model": "google/gemini-2.5-flash",
             "max_tokens": 128000,
-            "tts_provider": "VoiceMaker",
+            "tts_provider": "GeminiTTS",
             "elevenlabs_template_uuid": "38cedea9-5381-474f-a82d-874a5fb6b311",
             "voicemaker_voice_id": "ai5-ru-RU-Vladimir",
-            "gemini_voice": "Puck",
+            "gemini_voice": "Enceladus",
             "gemini_tone": "Read aloud in a warm and friendly tone: "
         },
         "pl-PL": {
             "display_name": "Польська",
-            "prompt": "",
+            "prompt": "Translate this text into Polish with COMPLETE cultural adaptation for Polish audiences. Follow these requirements:\n\nGENERAL PRINCIPLES:\nTranslate ALL text completely, without cuts or omissions\nPreserve the original structure and narrative style\nFULLY adapt ALL cultural elements to be familiar and natural for Polish readers\n\nNAMES AND FORMS OF ADDRESS:\nAdapt ALL names to Polish equivalents (Алёна → Alena, Игорь → Igor)\nRemove patronymics and replace with natural Polish forms of address\nUse appropriate Polish titles and forms of courtesy (pan, pani, państwo, etc.)\n\nGEOGRAPHY AND COMPLETE LOCALIZATION:\nReplace ALL geographical references with Polish regions (taiga → Białowieża Forest, Tatra Mountains, Carpathians)\nAdapt climate and landscape to familiar Polish environments\nReplace Russian/Siberian settings with equivalent Polish locations (Masuria, Bieszczady, Sudetes)\nUse familiar flora and fauna for Polish speakers\n\nLANGUAGE AND STYLE:\nUse natural Polish idioms and expressions instead of literal translation\nAdapt dialogues to natural Polish conversational language\nPreserve emotional weight and atmosphere while making it culturally Polish\nUse appropriate regional Polish variants\n\nCULTURAL ELEMENTS - COMPLETE ADAPTATION:\nReplace ALL cultural references: food, clothing, traditions, institutions\nAdapt occupations and social structures to Polish equivalents\nReplace wildlife conservation context to familiar Polish regions\nChange all cultural practices to Polish equivalents\nAdapt government institutions, educational systems, and social norms\n\nSETTING ADAPTATION:\nTransform the Siberian wilderness into a familiar Polish natural environment\nAdapt the reserve/conservation context to Polish realities\nReplace all Russian cultural elements with Polish equivalents\n\nThe result should read like an original Polish text set in Poland, written for Polish audiences, with NO foreign cultural elements remaining, while preserving all plot elements and emotional depth of the original.\n\nIMPORTANT: Provide ONLY the translation. Do not include any explanations, comments, notes, or additional text - just the translated content.",
             "model": "google/gemini-2.5-flash",
             "max_tokens": 128000,
             "tts_provider": "ElevenLabs",
-            "elevenlabs_template_uuid": "1ff95d26-7660-45d1-a615-ba947d730bea",
+            "elevenlabs_template_uuid": "3bba5178-ce2b-4c6c-9fff-281a40b32bc2",
             "voicemaker_voice_id": "ai2-pl-PL-Hanna",
             "gemini_voice": "Puck",
             "gemini_tone": ""
@@ -98,9 +98,9 @@
         }
     },
     "image_prompt_settings": {
-        "prompt": "зроби 50 промтів для генерації зображень.\nкожен промт з нумераціею 1. промт 2 промт. і так далі\nбез зайвих коментарів.\nпромти на англ мові.",
+        "prompt": "You are an expert in creating prompts for generating images on Imagen 4. Your task is to analyze the story text and create EXACTLY 50 high-quality prompts for photorealistic visual accompaniment with consistent characters and unified style.\nCRITICAL: YOU MUST CREATE EXACTLY 50 PROMPTS, NOT 30, NOT 40, BUT EXACTLY 50 PROMPTS\nSTEP 1: IDENTIFY THE HOOK\nFirst, find the HOOK section of the story:\n\nThe HOOK is everything BEFORE phrases like \"Прежде чем начнем\", \"Але перш ніж почнемо\", \"But before we begin\", or similar transitional phrases\nThis hook section is crucial for grabbing attention\nThe first 5 prompts MUST be based ONLY on this hook section\n\nSTEP 2: CHARACTER ANALYSIS\nRead the entire story including the hook and identify:\n\nMain characters: their age, gender, physical appearance, hair color and style, eye color, distinctive features, typical clothing\nSupporting characters: their key characteristics\nSetting details: time period, location, season, atmosphere\n\nCreate a CHARACTER REFERENCE LIST with detailed descriptions that will be used consistently across all prompts.\nSTEP 3: SCENE DISTRIBUTION\nThe story must be divided as follows:\n\nPrompts 1-5: HOOK section ONLY (the attention-grabbing opening before \"Прежде чем начнем\")\nPrompts 6-50: Main story (45 prompts evenly distributed):\n\nBeginning: prompts 6-15\nEarly middle: prompts 16-25\nMiddle: prompts 26-35\nLate middle: prompts 36-45\nEnding: prompts 46-50\n\n\n\nSTEP 4: STYLE DEFINITION\nDefine ONE unified photorealistic style for all images:\n\nPhotorealistic style, looks like a real photograph\nConsistent color palette throughout the series\nProfessional cinematography with natural depth of field\nHigh quality realistic rendering\n\nRULES FOR CREATING PROMPTS:\n\nCharacter Consistency:\n\nUse EXACT same physical descriptions for each character in every prompt they appear\nInclude: age, gender, hair color and length, eye color, build, distinctive features\nMaintain consistent clothing appropriate to the scene\n\n\nScene Selection:\n\nFirst 5 prompts: key visual moments from the HOOK only\nRemaining 45 prompts: evenly distributed throughout the main story\nEnsure scenes directly reflect the plot\n\n\nPhotorealistic Style Requirements:\n\nEvery prompt MUST include: \"photorealistic, looks like a real photograph\"\nAdd: \"realistic skin textures, natural lighting, real life photography\"\nInclude: \"shot on professional camera, 35mm lens\"\nNEVER use words like: cartoon, animated, illustration, drawing, painting, anime, sketch\n\n\nAbsolutely NO TEXT on Images:\n\nNEVER include dialogue, subtitles, captions, or any text elements\nDo NOT mention: speech bubbles, text overlays, subtitles, captions, words, letters\nAdd explicitly: \"no text, no words, no subtitles, no captions\"\nFocus only on visual storytelling through action and expression\n\n\nScene Description Structure:\n\nMain subject with consistent character details\nAction or emotion being portrayed\nSetting and environment details\nLighting and atmosphere\nCamera angle and composition\nPhotorealistic style markers\nExplicit \"no text\" instruction\n\n\nSafety:\n\nNo blood, violence, or disturbing imagery\nKeep all scenes appropriate and tasteful\n\n\nFormat:\n\nEach prompt in English\nUse only commas to separate elements\nNo special characters, brackets, or quotation marks\nNumber each prompt from 1 to 50\n\n\n\nOUTPUT FORMAT:\nHOOK SECTION IDENTIFIED:\n[Brief description of what the hook covers]\nCHARACTER REFERENCE:\n[List main characters with full consistent descriptions]\nUNIFIED STYLE:\nPhotorealistic cinematic photography, looks like real photographs, realistic skin textures, natural lighting, shot on professional camera, 35mm lens, high quality, no text, no subtitles, no captions\nPROMPTS:\nHOOK SECTION (Prompts 1-5):\n\nPhotorealistic photograph, [scene from hook], [character details], [setting], natural lighting, realistic skin textures, shot on 35mm camera, professional cinematography, no text, no subtitles, no words, high quality\nPhotorealistic photograph, [second scene from hook], [details], natural lighting, realistic skin textures, shot on 35mm camera, professional cinematography, no text, no subtitles, no words, high quality\nPhotorealistic photograph, [third scene from hook], [details], natural lighting, realistic skin textures, shot on 35mm camera, professional cinematography, no text, no subtitles, no words, high quality\nPhotorealistic photograph, [fourth scene from hook], [details], natural lighting, realistic skin textures, shot on 35mm camera, professional cinematography, no text, no subtitles, no words, high quality\nPhotorealistic photograph, [fifth scene from hook], [details], natural lighting, realistic skin textures, shot on 35mm camera, professional cinematography, no text, no subtitles, no words, high quality\n\nMAIN STORY (Prompts 6-50):\n\nPhotorealistic photograph, [beginning of main story], [character details], [setting], natural lighting, realistic skin textures, shot on 35mm camera, professional cinematography, no text, no subtitles, no words, high quality\n\n7-15. [Continue with beginning section]\n16-25. [Early middle section]\n26-35. [Middle section]\n36-45. [Late middle section]\n46-50. [Ending section - final 5 prompts from conclusion]\n\nPhotorealistic photograph, [final scene], natural lighting, realistic skin textures, shot on 35mm camera, professional cinematography, no text, no subtitles, no words, high quality\n\nVERIFICATION BEFORE SUBMITTING:\n\nCount prompts 1-5: these MUST be from the hook section only\nCount prompts 6-50: these are from the main story (45 prompts)\nTotal count MUST be exactly 50 prompts\n\nCRITICAL REMINDERS:\n\nFirst 5 prompts are ONLY from the HOOK (before \"Прежде чем начнем\" or similar phrase)\nPrompts 6-50 cover the main story after the hook\nALWAYS include \"photorealistic, looks like a real photograph\" in every prompt\nALWAYS include \"no text, no subtitles, no words\" in every prompt\nNEVER use illustration, cartoon, anime, or drawing style words\nYOU MUST CREATE EXACTLY 50 PROMPTS - count them before finishing\n\nTASK:\nRead the provided story text carefully, identify the HOOK section, create the character reference list and unified photorealistic style definition, then generate EXACTLY 50 PROMPTS following the structure above: 5 prompts for the hook, 45 prompts for the main story.\n!!!I don't use names in promts!!!\nNO HUMAN NAMES IN PROMTS!\n\nSTORY TEXT:",
         "model": "google/gemini-2.5-flash",
-        "max_tokens": 10000
+        "max_tokens": 128000
     },
     "results_path": "C:/Users/kvxshenyjbetxn/Desktop/test",
     "pollinations": {
@@ -121,7 +121,7 @@
     },
     "elevenlabs_api_key": "427641798:6f346a2f6566757954354b5732517977625a416457513d3d",
     "voicemaker_api_key": "6fa26760-923d-11f0-9347-11ea6ac82a77",
-    "voicemaker_char_limit": 100,
+    "voicemaker_char_limit": 2900,
     "gemini_tts_api_key": "VGJffif22OKOdKZ6l7UDutQOZWM46tUNJ-GxHaGFCbM",
     "gemini_tts_url": "https://gemini-tts-server-beta-production.up.railway.app",
     "subtitles": {
@@ -130,9 +130,9 @@
         "font": "Impact",
         "fontsize": 60,
         "color": [
-            157,
-            157,
-            157
+            255,
+            255,
+            255
         ],
         "margin_v": 100,
         "fade_in": 200,
