--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ core/whisper-cli-amd/small.bin
 config/templates/my.json
 config/templates/povod.json
 config/settings.json
+config/templates/povod-ro.json
