--- a/.gitignore
+++ b/.gitignore
@@ -6986,3 +6986,43 @@ dist/CombainProject/_internal/wrapt/_wrappers.cp313-win_amd64.pyd
 dist/CombainProject/_internal/yaml/_yaml.cp313-win_amd64.pyd
 dist/CombainProject/_internal/yarl/_quoting_c.cp313-win_amd64.pyd
 dist/CombainProject/config/settings.json
+build/new-project-combain/Analysis-00.toc
+build/new-project-combain/base_library.zip
+build/new-project-combain/EXE-00.toc
+build/new-project-combain/new-project-combain.pkg
+build/new-project-combain/PKG-00.toc
+build/new-project-combain/PYZ-00.pyz
+build/new-project-combain/PYZ-00.toc
+build/new-project-combain/warn-new-project-combain.txt
+build/new-project-combain/xref-new-project-combain.html
+build/new-project-combain/localpycs/pyimod01_archive.pyc
+build/new-project-combain/localpycs/pyimod02_importers.pyc
+build/new-project-combain/localpycs/pyimod03_ctypes.pyc
+build/new-project-combain/localpycs/pyimod04_pywin32.pyc
+build/new-project-combain/localpycs/struct.pyc
+dist/new-project-combain.exe
+dist_final/new-project-combain.exe
+dist_final/README.txt
+dist_final/config/settings.json
+dist_final/config/templates/my.json
+dist_final/config/templates/povod-ro.json
+dist_final/config/templates/povod.json
+dist_final/whisper-cli-amd/base.bin
+dist_final/whisper-cli-amd/doc.txt
+dist_final/whisper-cli-amd/lz4.txt
+dist_final/whisper-cli-amd/main.exe
+dist_final/whisper-cli-amd/medium.bin
+dist_final/whisper-cli-amd/small.bin
+dist_final/whisper-cli-amd/Whisper.dll
+new-project-combain.spec
+dist/config/settings.json
+dist/config/templates/my.json
+dist/config/templates/povod-ro.json
+dist/config/templates/povod.json
+dist/whisper-cli-amd/base.bin
+dist/whisper-cli-amd/doc.txt
+dist/whisper-cli-amd/lz4.txt
+dist/whisper-cli-amd/main.exe
+dist/whisper-cli-amd/medium.bin
+dist/whisper-cli-amd/small.bin
+dist/whisper-cli-amd/Whisper.dll
