chore: Додано виконувані файли ffmpeg та ffprobe до .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ assets/deno.exe
 Soloveyko.AI-Video.Maker.spec
 history/
 pollinations.text.py
+assets/ffmpeg
+assets/ffmpeg.exe
+assets/ffprobe
+assets/ffprobe.exe
